@@ -1,29 +1,0 @@
-<page columns=1 padding=16 name=front background=bg.png linkcolor=#88dddd>
-<font face=aircut3/32 color=#ffffff>
-<p align=50%>
-E-GtkRc
-<font face=aircut3/18 color=#88eeff>
-<p align=50%>
-Epplet for changing your Gtk-Theme
-<font face=aircut3/12 color=#ffffff>
-<p align=50%>
-By Tuncer M. Ayaz - 2000<br>
-<p>
-With this Epplet you can switch between your Gtk-Themes.
-<br>
-Switching updates the theme for all Gtk-Apps and starts a little Gtk-App that comes with E-GtkRc to show you the result.
-<p>
-I wrote this little Epplet because I don't use GNOME just E. So I needed a little tool that would do the same as the Theme-Selector of the GNOME-ControlCenter.
-<p>
-_Usage(usage)
-<page columns=1 padding=16 name=usage background=bg.png linkcolor=#88dddd>
-<p align=50%>
-<font face=aircut3/16 color=#88eeff>HowTo use:
-<p>
-<font face=aircut3/12 color=#ffffff>
-You must have your .gtkrc-files installed in ~/.gtk/.
-<br>
-For example to select BlueSteel from the themes-list you should have the file .gtkrc.BlueSteel in ~/.gtk/ which could have it's pixmap-directory in ~/.gtk/ too.<p>
-The Epplet just makes symlinks to the gtkrc's so it is very important that you have the right "module_path" and "pixmap_path" definitions in your gtkrc's. module_path is for the different gtk-engines you may use like "pixmap" or "thinice".  pixmap_path tells the gtk-engines where to find the pixmaps used in the gtk-themes.
-<p>
-When you install new themes you have to press the RELOAD-button between help and close.
